# SimpleLog

./: CMakeLists.txt
src/: Appender.hpp  FileAppender.cc  FileAppender.hpp  LogEvent.cc  LogEvent.hpp  LogFormatter.cc  LogFormatter.hpp  LogLevel.hpp  Logger.cc  Logger.hpp  LoggerManager.cc  LoggerManager.hpp  StdoutAppender.cc  StdoutAppender.hpp  Utils.hpp  Wrap.hpp
test/: test_filelog.cpp  test_outlog.cpp
